# allocator-fallback

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  rustfmt.toml
misc/: crate-readme.md
misc/feature-test/: allocator_api.rs
src/: fallback.rs  lib.rs
